@@ -1,3 +1,12 @@
+2003-10-09  David Hyatt  <hyatt@apple.com>
+
+	Make definition of kMin and kMax match the KHTML trunk.  Someone still needs to eliminate uses of QMIN
+	and QMAX from the code.
+
+        * kwq/KWQDef.h:
+        (kMin):
+        (kMax):
+
 2003-10-09  Chris Blumenberg  <cblu@apple.com>
 
 	Fixed: <rdar://problem/3333897>: should support navigator.plugins.refresh as a way to add a plugin without restarting Safari
